[package]
name = "concurrency"
version = "0.1.0"
edition = "2024"
authors = ["Kevin <jieyun1993@gmail.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0.97"
dashmap = "6.1.0"
oneshot = "0.1.11"
rand = "0.8.5"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
